# flexpart

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  Dockerfile_flexpart  Dockerfile_jasper  README.md  README_PARALLEL.md  compile.sh  entrypoint.sh  mkdocs.yml
.claude/memory/: MEMORY.md  project_flexpart_overview.md
.gitlab/service_desk_templates/: thank_you.md
containers/: Dockerfile  Dockerfile.v10.4  Singularity
documentation/: README.md  installation.md  mkdocs.yml  running.md
documentation/docs/: LCM.md  building.md  configuration.md  containers.md  evolution.md  examples.md  index.md  installation.md  output.md  running.md  transport.md  troubleshooting.md
examples/Aerosol/: COMMAND  OUTGRID  RELEASES
examples/Aerosol/SPECIES/: SPECIES_040
examples/Nuclear/: AGECLASSES  COMMAND  OUTGRID  OUTGRID_NEST  RELEASES
examples/Nuclear/SPECIES/: SPECIES_021
examples/Tracer/: COMMAND  OUTGRID  PARTOPTIONS  RELEASES
examples/Tracer/SPECIES/: SPECIES_024
options/: COMMAND  PARTOPTIONS
options.reference/: COMMAND.reference  OUTGRID
options.reference/SPECIES/: SPECIES.README
options/SPECIES/: SPECIES_003  SPECIES_004  SPECIES_008  SPECIES_011  SPECIES_013  SPECIES_015  SPECIES_018  SPECIES_020  SPECIES_023  SPECIES_025  SPECIES_031  SPECIES_034  SPECIES_040  SPECIES_050  SPECIES_DUST-COARSE
scripts/: create_available_gfs.sh  gfsgrib2nc.py
src/: FLEXPART.f90  advance.f90  advance_mod.f90  binary_output_mod.f90  boundcond_domainfill.f90  calcfluxes.f90  calcmatrix.f90  calcpar.f90  calcpv.f90  calcpv_old.f90  cbl.f90  cbl_mod.f90  chemistry_mod.f90  class_gribfile_mod.f90  clustering.f90  cmapf_mod.f90  com_mod.f90  conccalc.f90  conv_mod.f90  convect43c.f  convmix.f90  convmix_temp.f90  coord_ecmwf_mod.f90  coordinates_ecmwf.f90  coordinates_ecmwf_mod.f90  coordinates_meters.f90  date_mod.f90  drydepo_mod.f90  emissions_mod.f90  erf_mod.f90  ew.f90  flux_mod.f90  get_settling.f90  get_vdep_prob.f90  get_wetscav.f90  getfields.f90  getfields_mod.f90  gitversion.txt  hanna_mod.f90  init_domainfill.f90  (+73 more)
src/redundant/: FLEXPART_MPI.f90  advance.f90  assignland.f90  boundcond_domainfill.f90  calcmatrix.f90  calcpv.f90  conccalc.f90  convect43c.f90  convmix.f90  domainfill.f90  get_vdep_prob.f90  get_wetscav.f90  gridcheck_ecmwf.f90  initial_cond_calc.f90  initialize_cbl_vel.f90  initialize_particle.f90  interpol_all.f90  interpol_all_nests.f90  interpol_misslev.f90  interpol_misslev_nests.f90  interpol_rain.f90  interpol_rain_nests.f90  interpol_vdep.f90  interpol_wind.f90  interpol_wind_nests.f90  interpol_wind_short.f90  interpol_wind_short_nests.f90  mpi_mod.f90  ohreaction.f90  partoutput.f90  partpos_average.f90  pbl_profile.f90  readavailable.f90  readpartpositions.f90  readwind_ecmwf.f90  redist.f90  richardson.f90  timemanager.f90  timemanager_mpi.f90  verttransform_ecmwf.f90  (+1 more)
tests/: Dockerfile  Dockerfile.python  README.md  bkw_master.txt  bkw_test.py  etex_test.py  openmp_test.py  part_ic.nc  pathnames  pathnames_nests  run_default_options_test.sh  run_etex_test.sh  run_nests_test.sh  run_openmp_test.sh  settling_master.txt  settling_old.txt  settling_test.py
tests/default_etex/: AVAILABLE  EC1994102312.REMOVED.git-id  EC1994102318.REMOVED.git-id  EC1994102400.REMOVED.git-id  EC1994102406.REMOVED.git-id  EC1994102412.REMOVED.git-id  EC1994102418.REMOVED.git-id  EC1994102500.REMOVED.git-id  EC1994102506.REMOVED.git-id  EC1994102512.REMOVED.git-id  EC1994102518.REMOVED.git-id  EC1994102600.REMOVED.git-id  EC1994102606.REMOVED.git-id  EC1994102612.REMOVED.git-id  EC1994102618.REMOVED.git-id  EC1994102700.REMOVED.git-id  EC1994102706.REMOVED.git-id  EC1994102712.REMOVED.git-id  RECEPTORS  stationlist.950130
tests/default_options/: AGECLASSES  COMMAND  PARTOPTIONS  RELEASES
tests/default_options/SPECIES/: SPECIES.README  SPECIES_002  SPECIES_005  SPECIES_006  SPECIES_007  SPECIES_009  SPECIES_010  SPECIES_012  SPECIES_014  SPECIES_016  SPECIES_017  SPECIES_019  SPECIES_021  SPECIES_022  SPECIES_024  SPECIES_026  SPECIES_027  SPECIES_040  SPECIES_050  SPECIES_051
tests/default_winds/: AVAILABLE  AVAILABLE_europe  AVAILABLE_glob  EA12010100  EA12010101  EA12010102  EA12010103  EA12010104  EA12010105  EA12010106  EA12010107  EA12010108  EA12010109  EA12010110  EA12010111  EA12010112  EA12010113  EA12010114  EA12010115  EA12010116  EA12010117  EA12010118  EA12010119  EA12010120  EA12010121  EA12010122  EA12010123  EA2009010100.REMOVED.git-id  EA2009010106.REMOVED.git-id  EAe2009010100.REMOVED.git-id  EAe2009010106.REMOVED.git-id  EC2009010100.REMOVED.git-id  EC2009010106.REMOVED.git-id  EC2009010112.REMOVED.git-id  EC2009010118.REMOVED.git-id
tests/examples/: Makefile  README  RELEASES_Grimsvotn_FPrun3_2012  config.10.4.NILU  define_options_1.sh  define_options_10.sh  define_options_11.sh  define_options_3.sh  define_options_5.sh  define_options_6.sh  define_options_7.sh  define_options_8.sh  set_default_example_10.4.sh
tests/examples/default_examples/paper10.4/: pathnames
tests/flex_read_fortran/: README  makefile  printgrid.f90  printgrid_ncf.f90  printpart.f90  readheader_ncf.f  readheader_stdout90.f90  readpart.f  work_arrays.f90
tests/read_examples/: config.10.4.NILU  declare_examples  read_examples.sh  set_examples_all  set_examples_i.sh
